istio/base/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressgateway
  namespace: istio-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`*`)
    services:
    - name: istio-ingressgateway
      port: 443
  tls:
    passthrough: true
